[package]
name = "iso8583_rs"
version = "0.1.0"
authors = ["Raghavendra Balgi <rkbalgi@gmail.com>"]
edition = "2018"
description = "A library to define/parse/assemble and deliver (via TCP) an ISO8583 message"
license = "Apache-2.0"
publish = true
repository = "https://github.com/rkbalgi/iso8583_rs"
documentation = "https://github.com/rkbalgi/iso8583_rs"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"
hex = "0.4.2"
byteorder = "1.3.4"
log = "0.4.8"
simplelog = "0.8.0"