[package]
name = "iso8583_rs"
version = "0.1.8"
authors = ["Raghavendra Balgi <rkbalgi@gmail.com>"]
edition = "2018"
description = "A library to define/parse/assemble and send/receive (via TCP) an ISO8583 message"
license = "Apache-2.0"
publish = true
repository = "https://github.com/rkbalgi/iso8583_rs"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"
hex = "0.4.2"
byteorder = "1.3.4"
log = "0.4.8"
simplelog = "0.8.0"
serde = { version = "1.0.113", features = ["derive"] }
serde_yaml = "0.8.13"
encoding8 = "0.3.2"
hexdump = "0.1.0"
rand = "0.7.3"
des = "0.4.0"
generic-array = "0.14.2"
odds = "0.4.0"
block-modes = "0.5.0"
hex-literal = "0.2.1"